--- a/app/src/main/res/drawable-night/bg_splash_text.xml
+++ b/app/src/main/res/drawable-night/bg_splash_text.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" android:padding = "10dp">
-    <solid android:color="@color/white" />
+    <solid android:color="@color/black" />
     <corners
         android:bottomLeftRadius="15dp"
         android:bottomRightRadius="15dp"
@@ -9,5 +9,5 @@
         android:topRightRadius="15dp" />
     <stroke
         android:width="4dp"
-        android:color="@color/black" />
+        android:color="@color/white" />
 </shape>
