--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,17 +3,22 @@
     <item
         android:id="@+id/nav_home"
         android:enabled="true"
-        android:icon="@drawable/ic_baseline_home_24"
+        android:icon="@drawable/ic_home"
         android:title="@string/home"/>
     <item
         android:id="@+id/nav_cardbook"
         android:enabled="true"
-        android:icon="@drawable/ic_baseline_menu_book_24"
+        android:icon="@drawable/ic_book"
         android:title="@string/cardbook"/>
+    <item
+        android:id="@+id/nav_training"
+        android:enabled="true"
+        android:icon="@drawable/ic_school"
+        android:title="@string/training"/>
     <item
         android:id="@+id/nav_my_account"
         android:enabled="true"
-        android:icon="@drawable/ic_baseline_person_24"
+        android:icon="@drawable/ic_account_box"
         android:title="@string/my_account"/>
 
 </menu>
