--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -12,7 +12,7 @@
         android:layout_height="match_parent">
 
         <TextView
-            style="@style/TextRegular"
+            android:theme="@style/TextRegular"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/bg_splash_text"
