--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_50">#F3E5F5</color>
-    <color name="purple_100">#E1BEE7</color>
+    <color name="purple_50">#EDE7F6</color>
+    <color name="purple_100">#D1C4E9</color>
     <color name="purple_200">#B39DDB</color>
     <color name="purple_300">#9575CD</color>
+    <color name="purple_400">#7E57C2</color>
     <color name="purple_500">#673AB7</color>
     <color name="purple_700">#512DA8</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="super_light_grey">#E6E6E6</color>
     <color name="light_grey">#878787</color>
     <color name="grey">#646464</color>
+    <color name="heavy_grey">#323232</color>
+    <color name="transparent">#00FFFFFF</color>
 </resources>
