--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -7,8 +7,8 @@
         <item name="colorOnSurface">@color/black</item>
         <item name="colorOnBackground">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_200</item>
+        <item name="colorSecondary">@color/purple_200</item>
+        <item name="colorSecondaryVariant">@color/purple_200</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
@@ -36,7 +36,7 @@
     </style>
 
     <style name="MainToolbar" parent="Widget.AppCompat.Toolbar">
-        <item name="android:background">#323232</item>
+        <item name="android:background">@color/heavy_grey</item>
         <item name="android:textColor">@color/white</item>
     </style>
 </resources>
