--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:bind="http://schemas.android.com/tools"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
@@ -15,47 +16,50 @@
         android:layout_height="match_parent">
 
         <androidx.appcompat.widget.Toolbar
-            android:id="@+id/main_toolbar"
+            android:id="@+id/toolbar_main"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:theme="@style/MainToolbar"
-            app:menu="@menu/toolbar_menu"
             android:elevation="2dp"
-            tools:background="@color/purple_50"
+            android:theme="@style/MainToolbar"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" >
+            app:layout_constraintTop_toTopOf="parent"
+            app:menu="@menu/toolbar_menu"
+            tools:background="@color/super_light_grey">
 
             <TextView
                 android:id="@+id/tv_toolbar_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:theme="@style/TextBold"
                 android:gravity="center"
+                android:text="@{vm.toolbarTitle}"
                 android:textSize="20sp"
-                tools:text="Home"/>
+                android:theme="@style/TextBold"
+                tools:text="Home" />
 
 
         </androidx.appcompat.widget.Toolbar>
 
         <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/home_vp2"
+            android:id="@+id/vp2_main"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintBottom_toTopOf="@id/home_bottom_nav_view"
+            app:layout_constraintBottom_toTopOf="@id/bnv_main"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/main_toolbar" />
+            app:layout_constraintTop_toBottomOf="@+id/toolbar_main"
+            bind:PageChangeCallback="@{vm}" />
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/home_bottom_nav_view"
-            android:theme="@style/BottomNavigationTheme"
+            android:id="@+id/bnv_main"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:theme="@style/BottomNavigationTheme"
             app:labelVisibilityMode="unlabeled"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:menu="@menu/bottom_nav_menu" />
+            app:menu="@menu/bottom_nav_menu"
+            bind:Listener="@{vm}" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
