--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,7 +11,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="super_light_grey">#E6E6E6</color>
+    <color name="super_light_grey">#FAFAFA</color>
     <color name="light_grey">#878787</color>
     <color name="grey">#646464</color>
     <color name="heavy_grey">#323232</color>
