--- a/app/src/main/res/drawable/bg_search_view.xml
+++ b/app/src/main/res/drawable/bg_search_view.xml
@@ -4,7 +4,7 @@
         android:top="-2dp">
         <shape
             android:shape="rectangle" android:padding = "10dp">
-            <solid android:color="@color/super_light_grey" />
+            <solid android:color="@color/white" />
             <corners
                 android:bottomLeftRadius="4dp"
                 android:bottomRightRadius="4dp" />
