--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -35,8 +35,9 @@
         <item name="android:background">@color/white</item>
     </style>
 
-    <style name="MainToolbar" parent="Widget.AppCompat.Toolbar">
+    <style name="MainToolbar" parent="ThemeOverlay.AppCompat.ActionBar">
         <item name="android:background">@color/super_light_grey</item>
         <item name="android:textColor">@color/black</item>
+        <item name="android:backgroundTint">@color/super_light_grey</item>
     </style>
 </resources>
