--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -19,6 +19,7 @@
         <item name="fontFamily">@font/jalnan</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:textStyle">normal</item>
+        <item name="android:paddingBottom">2dp</item>
         <item name="android:includeFontPadding">false</item>
     </style>
 
@@ -26,6 +27,7 @@
         <item name="fontFamily">@font/jalnan</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:textStyle">bold</item>
+        <item name="android:paddingBottom">2dp</item>
         <item name="android:includeFontPadding">false</item>
     </style>
 
