--- a/app/src/main/res/layout/fragment_cardbook.xml
+++ b/app/src/main/res/layout/fragment_cardbook.xml
@@ -9,7 +9,7 @@
 
         <variable
             name="vm"
-            type="com.lwj.memorizer.ui.cardbook.CardBookViewModel" />
+            type="com.lwj.memorizer.ui.cardbook.CardbookViewModel" />
         <variable
             name="svm"
             type="com.lwj.memorizer.ui.main.MainViewModel" />
@@ -34,6 +34,7 @@
 
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_cardbook_list"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:paddingTop="24dp"
