--- a/app/src/main/res/layout/fragment_cardbook.xml
+++ b/app/src/main/res/layout/fragment_cardbook.xml
@@ -41,12 +41,13 @@
             android:clipToPadding="false"
             android:layout_marginHorizontal="12dp"
             android:layout_marginTop="4dp"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
+            app:spanCount="2"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/sv_search_cardbook"
-            tools:listitem="@layout/item_cardbook" />
+            tools:listitem="@layout/item_cardbook_linear" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
