--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -1,11 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item
-        android:id="@+id/toolbar_main_reorder"
-        android:icon="@drawable/ic_list_view"
-        android:title="@string/reorder"
-        app:showAsAction="ifRoom"/>
+<!--    <item-->
+<!--        android:id="@+id/toolbar_main_reorder"-->
+<!--        android:icon="@drawable/ic_list_view"-->
+<!--        android:title="@string/reorder"-->
+<!--        app:showAsAction="ifRoom"/>-->
+    <group android:checkableBehavior="single">
+        <item
+            android:id="@+id/toolbar_main_reorder"
+            android:icon="@drawable/ic_list_view"
+            android:title="shown By">
+            <menu>
+                <item
+                    android:id="@+id/menu_shown_linear"
+                    android:title="Linear" />
+                <item
+                    android:id="@+id/menu_shown_grid"
+                    android:title="Gird" />
+            </menu>
+        </item>
+    </group>
     <item
         android:id="@+id/toolbar_menu_cardbook_search"
         android:icon="@drawable/ic_search_inactive"
