--- a/app/src/main/res/layout/act_cardbook.xml
+++ b/app/src/main/res/layout/act_cardbook.xml
@@ -1,15 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
+        <variable
+            name="vm"
+            type="com.lwj.memorizer.ui.cardbook.CardbookViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        tools:ignore="ContentDescription">
+
+        <androidx.fragment.app.FragmentContainerView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView"
@@ -25,11 +37,17 @@
                 android:layout_height="wrap_content">
 
                 <EditText
+                    android:id="@+id/et_cardbook_title"
+                    style="@style/TextRegular"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_margin="8dp"
-                    android:singleLine="true"
+                    android:layout_marginHorizontal="8dp"
+                    android:layout_marginVertical="16dp"
+                    android:background="@color/transparent"
                     android:hint="@string/cardbook_title_hint"
+                    android:singleLine="true"
+                    android:text="@={vm.cardbookTitle}"
+                    android:textSize="18sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/iv_cardbook_bookmark"
                     app:layout_constraintStart_toStartOf="parent"
@@ -48,16 +66,10 @@
 
         </androidx.cardview.widget.CardView>
 
-        <androidx.fragment.app.FragmentContainerView
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintBottom_toTopOf="@+id/cardView2"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cardView" />
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/cardView2"
+            android:id="@+id/cv_cardbook_save"
+            onSafeClick="@{() -> vm.onSaveButtonClicked()}"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:cardBackgroundColor="@color/purple_400"
@@ -77,7 +89,7 @@
                     android:drawablePadding="8dp"
                     android:gravity="center"
                     android:paddingVertical="16dp"
-                    android:text="@string/save"
+                    android:text="@string/save_button_text"
                     android:textColor="@color/white"
                     android:textSize="24sp"
                     app:drawableStartCompat="@drawable/ic_save"
