--- a/app/src/main/res/layout/item_cardbook_list_grid.xml
+++ b/app/src/main/res/layout/item_cardbook_list_grid.xml
@@ -55,6 +55,7 @@
             <ImageView
                 android:id="@+id/iv_cardbook_cover"
                 android:layout_width="0dp"
+                android:paddingVertical="16dp"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="4dp"
                 android:layout_marginHorizontal="8dp"
