--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -42,4 +42,8 @@
         <item name="android:textColor">@color/black</item>
         <item name="android:backgroundTint">@color/super_light_grey</item>
     </style>
+
+    <style name="ItemDivider" parent="Widget.AppCompat.TextView">
+        <item name="android:background">@color/super_light_grey</item>
+    </style>
 </resources>
