--- a/app/src/main/res/layout/item_cardbook_list_linear.xml
+++ b/app/src/main/res/layout/item_cardbook_list_linear.xml
@@ -10,6 +10,10 @@
             type="com.lwj.memorizer.ui.cardbooklist.CardbookListViewModel" />
 
         <variable
+            name="svm"
+            type="com.lwj.memorizer.ui.cardbook.CardbookViewModel" />
+
+        <variable
             name="model"
             type="com.lwj.memorizer.data.entities.Cardbook" />
 
@@ -29,6 +33,7 @@
         android:clickable="true"
         android:focusable="true"
         android:foreground="?attr/selectableItemBackground"
+        app:onLongClick="@{() -> vm.onCardbookItemLongClicked(model.idx)}"
         android:onClick="@{() -> vm.onCardbookItemClicked(model.idx)}"
         app:cardCornerRadius="8dp"
         app:contentPadding="4dp"
@@ -41,6 +46,16 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/iv_cardbook_check"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:src="@drawable/ic_radio_button_unchecked"
+                app:layout_constraintTop_toTopOf="parent"
+                android:paddingHorizontal="8dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
 
             <ImageView
                 android:id="@+id/imageView"
@@ -59,7 +74,7 @@
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_cardbook"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintStart_toEndOf="@id/iv_cardbook_check"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
