--- a/app/src/main/res/layout/item_cardbook_list_grid.xml
+++ b/app/src/main/res/layout/item_cardbook_list_grid.xml
@@ -49,17 +49,17 @@
                 android:layout_marginTop="2dp"
                 android:layout_marginEnd="2dp"
                 android:src="@{model.bookmarked ? @drawable/ic_bookmark_on : @drawable/ic_bookmark_off}"
-                tools:src="@drawable/ic_bookmark_on"
                 app:layout_constraintEnd_toEndOf="@+id/iv_cardbook_cover"
-                app:layout_constraintTop_toTopOf="@+id/iv_cardbook_cover" />
+                app:layout_constraintTop_toTopOf="@+id/iv_cardbook_cover"
+                tools:src="@drawable/ic_bookmark_on" />
 
             <ImageView
                 android:id="@+id/iv_cardbook_cover"
                 android:layout_width="0dp"
-                android:paddingVertical="16dp"
                 android:layout_height="wrap_content"
-                android:layout_marginVertical="4dp"
                 android:layout_marginHorizontal="8dp"
+                android:layout_marginVertical="4dp"
+                android:paddingVertical="16dp"
                 android:src="@drawable/ic_cardbook_big"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -75,19 +75,29 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/iv_cardbook_cover" />
 
+            <ImageView
+                android:id="@+id/iv_cardbook_check"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:paddingHorizontal="8dp"
+                android:src="@drawable/ic_radio_button_unchecked"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/view" />
+
             <TextView
                 android:id="@+id/tv_cardbook_title"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="8dp"
                 android:layout_marginTop="12dp"
-                android:maxLines="2"
                 android:ellipsize="end"
+                android:maxLines="2"
                 android:text="@{model.title}"
                 android:textSize="14sp"
                 android:theme="@style/TextRegular"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintStart_toEndOf="@id/iv_cardbook_check"
                 app:layout_constraintTop_toBottomOf="@+id/view"
                 tools:text="Vocabulary Vocabulary Vocabulary Vocabulary" />
 
@@ -95,14 +105,13 @@
                 android:id="@+id/tv_cardbook_content_count"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="8dp"
                 android:layout_marginTop="4dp"
                 android:text="@{`(` + count + `)`}"
                 android:textColor="@color/grey"
                 android:textSize="12sp"
                 android:theme="@style/TextRegular"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/tv_cardbook_title"
                 app:layout_constraintTop_toBottomOf="@+id/tv_cardbook_title"
                 tools:text="(0)" />
 
